--- a/index.html
+++ b/index.html
@@ -1,89 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/6c83491e5b.js" crossorigin="anonymous"></script>
-        <title>Podcast channel</title>
-    </head>
-        <header>
-            <nav class="navbar">NAVBAR</nav>
-        </header>
-    <body>
-        
-        <body class="grid-container">
-        <header class="header">
-            <h3 id="titulo-principal">Hello <span id=tachado>world</span> pale blue dot<span id=blue>.</span></h3>
-            <p id="subtitulo">Un podcast que explora el mundo de la programación <span class=ocultar>y<br> la tecnología</span>. Nuevos episodios,todos los jueves cada 15 días.</p>
-            <button class="conoce-mas">
-                <a class="link-boton" href="https://open.spotify.com/show/2ySVrxGkN6n6frMTo9Nsrt?go=1&utm_source=embed_v3&t=0&nd=1">
-                    CONOCÉ MAS
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6c83491e5b.js" crossorigin="anonymous"></script>
+    <title>Podcast channel</title>
+</head>
+<body>
+
+<nav>
+    <div class="nav-container container-lg flex" style="display: flex!important;">
+        <div class="logo">
+            <a href="#">
+                <img src="./images/logo.svg" alt="Blue Dot logo" />
+            </a>
+        </div>
+        <input id="toggle" type="checkbox" name="Mobile menu toggler button" />
+        <label for="toggle" class="hamburger" aria-label="Mobile menu toggler icon">
+            <span class="mobile-button mb-top"></span>
+            <span class="mobile-button mb-mid"></span>
+            <span class="mobile-button mb-bot"></span>
+        </label>
+        <ul class="menu-items">
+            <li>
+                <a href="#episodes" class="link-hover">
+                    episodios
                 </a>
-            </button>
-        </header>
-        <main class="main">
+            </li>
+            <li>
+                <a href="#about" class="link-hover">
+                    nosotros
+                </a>
+            </li>
+            <li>
+                <a href="#guests" class="link-hover">
+                    entrevistas
+                </a>
+            </li>
+            <li>
+                <a href="#topics" class="link-hover">
+                    tópicos
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="grid-container">
+
+    <div class="header">
+        <h3 id="titulo-principal">Hello <span id=tachado>world</span> pale blue dot<span id=blue>.</span></h3>
+        <p id="subtitulo">Un podcast que explora el mundo de la programación <span class=ocultar>y<br> la tecnología</span>. Nuevos episodios,todos los jueves cada 15 días.</p>
+        <button class="conoce-mas">
+            <a class="link-boton" href="https://open.spotify.com/show/2ySVrxGkN6n6frMTo9Nsrt?go=1&utm_source=embed_v3&t=0&nd=1">
+                CONOCÉ MAS
+            </a>
+        </button>
+    </div>
+
+    <main class="main">
+
         <div id="episodios">
             <h3 id="titulo-spoti">Episodios</h3>
-                <iframe class="muestra" src="https://open.spotify.com/embed-podcast/episode/6eCHJ8yOYtksW8OT93Dbdu" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <iframe class="muestra" src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <iframe class="muestra" src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <iframe class="muestra" src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe class="muestra" src="https://open.spotify.com/embed-podcast/episode/6eCHJ8yOYtksW8OT93Dbdu" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe class="muestra" src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe class="muestra" src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe class="muestra" src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
-        <img id="telefono-z" src="/images/phone.png" alt="the secret history of women in history">
+
+        <img id="telefono-z" src="images/phone.png" alt="the secret history of women in history">
         <div id="main-2">
             <h3 id="description">De dónde Venimos</h3>
             <p id="planet">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.<br>
                 <br>Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.
             </p>
         </div>
-            <h3 id="invitados">Invitadas/os estelares</h3>
-            <div id="main-3">
-            <img class="working" src="/images/grace-hopper.png" alt="Grace Hopper">
-            <img class="working" src="/images/Katie-Bouman.png" alt="katie Bouman">
-            <img class="working" src="/images/Margaret_Hamilton.png" alt="Margaret Hamilton">
-            <img class="working" src="/images/An E.R.A.Univac 1103 computer in the 1950s.png" alt="Computadora Univac">
-            <img class="working" src="/images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="computadoras opernado con Eniac">
-            <img class="working" src="/images/susan-kare.png" alt="Susan Kare">
+        <h3 id="invitados">Invitadas/os estelares</h3>
+        <div id="main-3">
+            <img class="working" src="images/grace-hopper.png" alt="Grace Hopper">
+            <img class="working" src="images/Katie-Bouman.png" alt="katie Bouman">
+            <img class="working" src="images/Margaret_Hamilton.png" alt="Margaret Hamilton">
+            <img class="working" src="images/An E.R.A.Univac 1103 computer in the 1950s.png" alt="Computadora Univac">
+            <img class="working" src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="computadoras opernado con Eniac">
+            <img class="working" src="images/susan-kare.png" alt="Susan Kare">
         </div>
-        </main>
-        <section class="section">
-                <h3 id="titulo-nuestros-temas">Algunos de nuestros temas</h3>
-                <div class="temas">
-                    <p class="section"><img class="fotos-temas" src="images/icon1.svg" alt="Trabajo a distancia">
-                        Trabajo Remoto</p>
-                    <p class="section"><img class="fotos-temas" src="images/icon2.svg" alt="Repensando la programación">
-                    Repensando la<br>programación </p>
-                    <p class="section"><img class="fotos-temas" src="images/icon3.svg" alt="Bases del código">
-                    Bases del código</p>
-                    <p class="section"><img class="fotos-temas" src="images/icon4.svg" alt="Seguridad informática">
-                    Seguridad<br> informática</p>
-                </div>
-                <div class="ultimas-novedades">
-                    <h2 id="#ultimas-noticias">
-                        ¿Querés las últimas Novedades?
-                    </h2>
-                    <button class="mas-episodios">
-                        <a class="link-boton" href="https://open.spotify.com/show/2ySVrxGkN6n6frMTo9Nsrt?go=1&utm_source=embed_v3&t=0&nd=1">
-                        ESCUCHÁ LOS EPISODIOS</a>
-                    </button>
-                </div>
-        </section>
-        <footer class="footer">
-            ©2019 - Hello blue pale dot
-            <div class="flex-container">
+    </main>
+    <section class="section">
+        <h3 id="titulo-nuestros-temas">Algunos de nuestros temas</h3>
+        <div class="temas">
+            <p class="section"><img class="fotos-temas" src="images/icon1.svg" alt="Trabajo a distancia">
+                Trabajo Remoto</p>
+            <p class="section"><img class="fotos-temas" src="images/icon2.svg" alt="Repensando la programación">
+                Repensando la<br>programación </p>
+            <p class="section"><img class="fotos-temas" src="images/icon3.svg" alt="Bases del código">
+                Bases del código</p>
+            <p class="section"><img class="fotos-temas" src="images/icon4.svg" alt="Seguridad informática">
+                Seguridad<br> informática</p>
+        </div>
+        <div class="ultimas-novedades">
+            <h2 id="#ultimas-noticias">
+                ¿Querés las últimas Novedades?
+            </h2>
+            <button class="mas-episodios">
+                <a class="link-boton" href="https://open.spotify.com/show/2ySVrxGkN6n6frMTo9Nsrt?go=1&utm_source=embed_v3&t=0&nd=1">
+                    ESCUCHÁ LOS EPISODIOS</a>
+            </button>
+        </div>
+    </section>
+    <footer class="footer">
+        ©2019 - Hello blue pale dot
+        <div class="flex-container">
             <a href="https://www.spotify.com/ar/"><i class="fab fa-spotify"></i>
-                </a>
+            </a>
             <a href="https://www.instagram.com/?hl=es-la"> <i class="fab fa-instagram"></i>
-                </a>
+            </a>
             <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i>
-                </a>
+            </a>
             <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i>
-                </a>
+            </a>
             <a href="https://web.telegram.org/#/login"><i class="fab fa-telegram"></i>
-                </a>
-            </div>
-        </footer>
-    </body>
+            </a>
+        </div>
+    </footer>
+</div>
 </html>
